[gd_scene load_steps=6 format=2]

[ext_resource path="res://RadarGame/Scripts/Camera.gd" type="Script" id=1]
[ext_resource path="res://RadarGame/Sprites/Background/binoculars.png" type="Texture" id=2]
[ext_resource path="res://RadarGame/Scripts/Spawner.gd" type="Script" id=3]
[ext_resource path="res://RadarGame/Font/TravelingTypewriter.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 4 )

[node name="Root" type="Spatial"]

[node name="Player" type="Spatial" parent="."]
transform = Transform( 0.999998, 0.00183508, -0.000232128, -0.0018363, 0.999984, -0.00536202, 0.000222281, 0.00536244, 0.999986, 0, 0, 0 )
script = ExtResource( 1 )

[node name="Binoculars" type="Sprite" parent="Player"]
visible = false
position = Vector2( 540, 309 )
scale = Vector2( 2.27148, 2.54687 )
texture = ExtResource( 2 )

[node name="Camera" type="Camera" parent="Player"]
current = true
near = 0.01
far = 400.0

[node name="RayCast" type="RayCast" parent="Player"]
transform = Transform( 1, 0, 9.57243e-11, -9.09495e-12, -4.37722e-08, -1, 0, 1, -4.33065e-08, 0, 0, 0 )
enabled = true
cast_to = Vector3( 0, -400, 0 )

[node name="Control" type="Control" parent="Player"]
margin_left = 1.0
margin_top = -3.05176e-05
margin_right = 1025.0
margin_bottom = 598.0

[node name="VSlider" type="VSlider" parent="Player/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 978.0
margin_top = -389.0
margin_right = -20.0009
margin_bottom = -576.0
rect_rotation = 180.0
rect_scale = Vector2( 1.3, 1.3 )
rect_pivot_offset = Vector2( 12.2292, 404.611 )
min_value = 1.0
max_value = 70.0
step = 0.5
value = 70.0

[node name="Quiz" type="Panel" parent="Player/Control"]
visible = false
margin_left = 579.0
margin_top = 402.0
margin_right = 881.0
margin_bottom = 548.0

[node name="Title" type="Label" parent="Player/Control/Quiz"]
margin_right = 302.0
margin_bottom = 28.0
custom_fonts/font = SubResource( 1 )
text = "Aircraft Detected!"
align = 1
valign = 1
uppercase = true

[node name="Label2" type="Label" parent="Player/Control/Quiz"]
margin_top = 26.0
margin_right = 301.0
margin_bottom = 112.0
custom_fonts/font = SubResource( 1 )
text = "Is this a Friendly or Hostile aircraft?"
align = 1
valign = 1
autowrap = true
uppercase = true

[node name="HBoxContainer" type="HBoxContainer" parent="Player/Control/Quiz"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 68.0
margin_top = 105.0
margin_right = -70.0
margin_bottom = -0.999939

[node name="FriendlyButton" type="Button" parent="Player/Control/Quiz/HBoxContainer"]
margin_right = 86.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 1 )
text = "Friendly"

[node name="HostileButton" type="Button" parent="Player/Control/Quiz/HBoxContainer"]
margin_left = 90.0
margin_right = 164.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 1 )
text = "Hostile"

[node name="Cooldown" type="Timer" parent="Player"]

[node name="Plane" type="Spatial" parent="."]
script = ExtResource( 3 )

[node name="Label3D" type="Label3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00122556, 0.0228651, -335.483 )
pixel_size = 1.0
text = "North"
__meta__ = {
"_editor_description_": ""
}

[node name="Label3D2" type="Label3D" parent="."]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0.00245111, 0.0457302, 383.068 )
pixel_size = 1.0
text = "South"
__meta__ = {
"_editor_description_": ""
}

[node name="Label3D3" type="Label3D" parent="."]
transform = Transform( 1.31134e-07, 0, -1, 0, 1, 0, 1, 0, 1.31134e-07, 366.384, 0.0685952, -4.53412 )
pixel_size = 1.0
text = "East"
__meta__ = {
"_editor_description_": ""
}

[node name="Label3D4" type="Label3D" parent="."]
transform = Transform( -0.0010963, -0.00108124, 0.999999, 0.00285739, 0.999995, 0.00108435, -0.999995, 0.00285857, -0.00109322, -309.64, 0.0685953, -4.53412 )
pixel_size = 1.0
text = "West"
__meta__ = {
"_editor_description_": ""
}

[connection signal="drag_ended" from="Player/Control/VSlider" to="Player" method="_on_VSlider_drag_ended"]
[connection signal="drag_started" from="Player/Control/VSlider" to="Player" method="_on_VSlider_drag_started"]
[connection signal="gui_input" from="Player/Control/VSlider" to="Player" method="_on_VSlider_gui_input"]
[connection signal="pressed" from="Player/Control/Quiz/HBoxContainer/FriendlyButton" to="Player" method="_on_FriendlyButton_pressed"]
[connection signal="pressed" from="Player/Control/Quiz/HBoxContainer/HostileButton" to="Player" method="_on_HostileButton_pressed"]
